correcciones de Laura, ya casito

--- a/Capitulos/cap3.tex
+++ b/Capitulos/cap3.tex
@@ -1,34 +1,35 @@
 \chapter{Evolución Hacia El Equilibrio}
 
-En el capítulo anterior se expuso la idea de Popescu \textit{et al} \cite{Popescu2006} para poder reconciliar las ideas fundamentales de la mecánica estadística. Se mostró que para estados genéricos de un universo se tiene que el estado del sistema va a estar muy cercano del estado canónico. Ya con esta idea la siguiente pregunta que se puede hacer es sobre la termalización, ¿este fenómeno cómo ocurre? ¿se puede deducir se las ecuaciones básicas(Schrödinger, Newton , etc)? Este capítulo mostrará lo que Linden \textit{et al} \cite{LindenPaper} proponen para poder responder estas preguntas siguiendo las ideas ya dadas en el capítulo anterior. La generalidad que se ha dado a los fundamentos gracias Popescu \textit{et al} permite una flexibilidad al momento de manejar nuevos problemas. Por eso se ve que además de tener una buena base filosófica, las matemáticas dan un buen esqueleto para sostener estas bases y seguir construyendo con ellas. Ahora se quiere tratar el caso en que el estado no se encuentra en un tiempo específico sino que va evolucionando en el tiempo. Entonces se deberá apuntar la maquinaria que ya se tiene para poder redondear el problema, esto será lo primero a  precisar. Luego se mostrará que por lo general los estados del sistema llegan al equilibrio y duran allí gran parte de su tiempo, todo esto bajo las especificaciones dadas al comienzo. Se seguirá dando un teorema que muestra como para la gran mayoría de casos de estados genéricos se llegará al equilibrio, aquí también se dará un argumento sobre cómo los estados lejanos al equilibrio  llegan a equilibrarse. Además se mostrará la independencia del estado inicial y problemas que no se han llegado a solucionar desde esta perspectiva.
+En el capítulo anterior se expuso la idea de Popescu \textit{et al} \cite{Popescu2006} que reconcilia las ideas fundamentales de la mecánica estadística. Se mostró que, para estados genéricos de un universo, el estado del sistema está muy cercano del estado canónico. Partiendo de esto cabe entonces preguntarse sobre la termalización, ¿cómo ocurre este fenómeno? ¿se puede deducir se las ecuaciones básicas(Schrödinger, Newton , etc)? Este capítulo mostrará lo que Linden \textit{et al} \cite{LindenPaper} proponen para responder estas preguntas siguiendo las ideas ya dadas en el capítulo anterior. 
+\\
+Gracias al carácter de generalidad que Popescu \textit{et al} han otorgado a los fundamentos, se tiene una mayor flexibilidad al momento de manejar nuevos problemas. Se ve que, además de contar con una buena base filosófica, las matemáticas dan un esqueleto sólido para sostener esta base y seguir construyendo con ellas. Se quiere tratar el caso en que el estado no se encuentra en un tiempo específico, sino que va evolucionando en el tiempo. Lo primero a tener en cuenta es la necesidad de apuntar la maquinaria existente para redondear el problema. Luego se mostrará que, por lo general, los estados de un sistema llegan al equilibrio y duran allí gran parte del tiempo, siguiendo las especificaciones dadas al comienzo. Se seguirá dando un teorema que muestra cómo la gran mayoría de casos de estados genéricos llegan al equilibrio, también argumentando cómo los estados lejanos al equilibrio llegan a equilibrarse. Además, se mostrará que el estado de equilibrio es independiente del estado inicial del ambiente y algunos problemas respecto a esto que han logrado ser resueltos.  
 
 \section{Especificación del Equilibrio}
 
-Las preguntas planteadas anteriormente quieren enfocarse en el equilibrio pero para poder seguir viendo qué ocurre   con este fenómeno se deberá establecer lo que significa. Basados en conceptos fenomenológicos se dará la  definición del equilibrio y qué se espera de este estado.
+Para continuar con el abordaje del problema del equilibrio, es necesario en primer lugar definir su significado. Con base en conceptos fenomenológicos se dará la  definición del equilibrio y qué se espera de este estado.
 \\
-La manera más intuitiva que se tiene sobre el equilibrio es que el sistema, que se está analizando se mantiene en el mismo estado durante un largo periodo de tiempo con las mismas características; entonces se dice que un sistema se equilibra si este evoluciona a un estado específico (puede ser puro pero en general es mixto) y se mantiene allí por casi todo el tiempo. Aún no se dice nada  sobre las dependencias que pueda tener, o sea se puede tener una condición de dependencia laxa; esto permite decir que el estado de equilibrio depende o no del estado inicial del susbsistema y/o del estado inicial del ambiente de forma arbitraría. Dado esto, no es importante cuál sea el estado de equilibrio; este puede ser la distribución de Boltzmann o cualquier otra. El concepto de equilibrio dicho aquí es una forma general de hablar sobre este fenómeno porque se da mucha libertad al estado y sus dependencias sobre el ambiente. Por eso se deberá especificar aún más la idea del equilibrio.
+La noción más intuitiva que se tiene sobre el equilibrio es la de un sistema que se mantiene en el mismo estado y con las mismas características durante un largo periodo de tiempo. S dice que un sistema se equilibra si evoluciona a un estado específico (puede ser puro pero en general es mixto) y se mantiene allí por la mayor parte del tiempo. En esta noción inicial no se menciona nada sobre las dependencias que pueda tener el sistema; se puede tener una condición de dependencia laxa, lo cual quiere decir que el estado de equilibrio depende o no del estado inicial del susbsistema y/o del estado inicial del ambiente de forma arbitraria. Por lo tanto, no es importante cuál sea el estado de equilibrio; éste puede ser la distribución de Boltzmann o cualquier otra. El concepto de equilibrio dado aquí es una forma general de hablar sobre este fenómeno porque otorga mucha libertad al estado y sus dependencias del ambiente. Es necesario especificar aún más la idea del equilibrio.
 \\
-El  estado de equilibrio del sistema no debería depender exactamente del estado inicial del baño. Esto quiere decir que el baño debe tener unos parámetros macroscópicos (como la temperatura) tales que cuando se llega al equilibrio, el estado dependa de la de estos parámetros, así se va especificando aún más la idea del equilibrio. Esta idea también es proveniente de lo que normalmente se espera del equilibrio porque los parámetros macroscópicos son los que en general se tienen completamente especificados y estos establecen el equilibrio. El estado exacto del baño no debería jugar un papel  tan importante porque para los mismos parámetros macroscópicos pueden haber varios estados del baño que concuerden con ellos. Se supone que con ciertos parámetros macroscópicos dados  un subsistema llegará al equilibrio sin importar cual ha sido su estado inicial. Pueden dos subsistemas preparados con los mismos parámetros macroscópicos haber sido iniciados en un estado A y el otro en el estado B llegarán al mismo estado de equilibrio sin importar en cual de los dos hayan empezado.  Esto motiva lo siguiente:
-Si el subsistema es pequeño en comparación con el ambiente el estado de equilibrio del subsistema debería ser independiente de su estado inicial. Pero para poder corroborar y unir estas ideas con los resultados conocidos se impone una última restricción. Bajo condiciones del estado inicial y el Hamiltoniano, el estado de equilibrio del subsistema puede ser escrito como $\rho_{S}= \frac{1}{Z} \exp(-\frac{H_{S}}{k_{B}T})$ la forma familiar dada por la mecánica estadística.
+El estado de equilibrio del sistema no debería depender del estado inicial del baño. Esto quiere decir que el baño debe tener unos parámetros macroscópicos (como la temperatura) tales que cuando se llegue al equilibrio, el estado dependa de estos parámetros -como se puede ver, la noción de equilibrio se va especificando-. Esta idea proviene de lo que normalmente se espera del equilibrio, porque los parámetros macroscópicos son los que generalmente están completamente especificados. El estado exacto del baño no juega un papel tan importante, porque para los mismos parámetros macroscópicos puede haber varios estados del baño que concuerden con éstos. Se supone que, con ciertos parámetros macroscópicos dados, un subsistema llegará al equilibrio sin importar cual ha sido su estado inicial. Pueden dos subsistemas preparados con los mismos parámetros macroscópicos haber sido iniciados, uno en un estado A, y el otro en un estado B, y llegarán al mismo estado de equilibrio sin importar el estado en el que hayan empezado.  Por lo tanto, si el subsistema es pequeño en comparación con el ambiente, el estado de equilibrio del subsistema debería ser independiente de su estado inicial. Pero para poder corroborar y unir estas ideas con los resultados conocidos, se impone una última restricción. Bajo condiciones del estado inicial y el Hamiltoniano, el estado de equilibrio del subsistema puede ser escrito como $\rho_{S}= \frac{1}{Z} \exp(-\frac{H_{S}}{k_{B}T})$, la forma familiar dada por la mecánica estadística.
 \\
-Haber podido dividir el problema de la termalización de esta forma permite analizar cada uno de los aspectos por separado además de darle una generalidad a todo el tratamiento sin tener que restringirse a situaciones que usualmente se le asocian a la termalización. Por ejemplo no se debe quedar en el régimen de corta o débil interacción entre el sistema y el baño o decir que el baño es uno típico (Dado una temperatura o rango de energía). Pueden tomarse situaciones en los que el sistema no llegue a equilibrio. 
+Dividiendo problema de la termalización de esta manera, es posible analizar cada uno de sus aspectos por separado. Además, este abordaje permite dar generalidad a todo el tratamiento sin tener que restringirse a situaciones que usualmente se asocian a la termalización. Por ejemplo no es obligatorio quedarse en el régimen de corta o débil interacción entre el sistema y el baño, o decir únicamente que el baño es típico (dados una temperatura o rango de energía), sino que se puede abordar situaciones en los que el sistema no llegue a equilibrio. 
 \\
-Lo siguiente, es que se mostrará con suposiciones no muy fuertes los primeros dos supuestos. La idea de que un sistema llegará al equilibrio y que el estado no depende del ambiente, son propiedades de sistemas cuánticos.La evolución del sistema tiene implicado al Hamiltoniano por eso se estudiará el siguiente:
+A continuación, se mostrará que las dos ideas iniciales -1.) un sistema siempre llegará al equilibrio y 2.) el estado no depende del ambiente- son propias de sistemas cuánticos. La evolución del sistema tiene implicado al hamiltoniano, por eso se estudiará el siguiente hamiltoniano:
 \begin{equation}
 H= \sum_{k} E_{k} \ket{E_{k}} \bra{E_{k}},
 \end{equation}
-donde $\ket{E_{k}}$ es el estado propio con energía $E_{k}$. Al Hamiltoniano anterior se le dará la única restricción de que tenga brechas de energías no degeneradas. Esto quiere decir que para una diferencia de energías dada, solo existe un par posible de estados con esa diferencia. El ejemplo puesto por Linden \textit{et al} \cite{LindenPaper} es: si se tiene 4 valores propios de energía $E_{k}, E_{l},E_{m},E_{n}$ entonces $E_{k}-E_{l}=E_{m}-E_{n} $ implica $k=l$ y $m=n$, o $k=m$ y $l=n$. Esto implica que los niveles de energía no son iguales para diferentes estados (no son degenerados).\\
-Esta restricción del Hamiltoniano comprende que no importa como se divida el subsistema y el baño  siempre van a estar interactuando. Esto excluye los Hamiltonianos no interactuantes ($H=H_{S}+H_{E}$) los cuales tienen muchas brechas de energía degeneradas. Si no hay interacción en el Hamiltoniano la energía es $E=E_{S}+E_{B}$ y sean $E_{1},E_{2},E_{3},E_{4}$ tales que se satisfaga $E_{i}=E_{i}^{S}+E_{i}^{E}$ $i=1,2,3,4$, esto lleva a una brecha degenerada. Este supuesto no es tan fuerte como pueda llegar a parecer porque cualquier perturbación que se le haga al Hamiltoniano romperá las degeneraciones sin importar lo pequeña que sea la perturbación. Aunque estos cambios se tarden en hacer efecto sobre la evolución del sistema, las escalas temporales no son importantes en este momento.  Gracias a esta restricción se pueden incluir interacciones complejas que por lo general no son analizadas en la literatura como interacciones de larga distancia o interacciones entre todas las partículas. Esto hace que la energía no llegue a ser una cantidad extensiva.
+donde $\ket{E_{k}}$ es el estado propio con energía $E_{k}$. Al hamiltoniano anterior se le dará la única restricción de que tenga brechas de energías no degeneradas. Esto quiere decir que, para una diferencia de energías dada, solo existe un par posible de estados con esa diferencia. El ejemplo puesto por Linden \textit{et al} \cite{LindenPaper} es: si se tienen 4 valores propios de energía $E_{k}, E_{l},E_{m},E_{n}$ entonces $E_{k}-E_{l}=E_{m}-E_{n} $ implica $k=l$ y $m=n$, o $k=m$ y $l=n$. Esto implica que los niveles de energía no son iguales para diferentes estados (no son degenerados).\\
+Esta restricción del hamiltoniano comprende que, sin importar cómo se dividan el subsistema y el baño, siempre van a estar interactuando. Esto excluye los hamiltonianos no interactuantes ($H=H_{S}+H_{E}$) los cuales tienen muchas brechas de energía degeneradas. Si no hay interacción en el hamiltoniano la energía es $E=E_{S}+E_{B}$ y sean $E_{1},E_{2},E_{3},E_{4}$ tales que se satisfaga $E_{i}=E_{i}^{S}+E_{i}^{E}$ $i=1,2,3,4$, se llega a una brecha degenerada. Este supuesto no es tan fuerte como pueda llegar a parecer, porque cualquier perturbación que se le haga al hamiltoniano romperá las degeneraciones sin importar lo pequeña que sea la perturbación. Aunque estos cambios se tarden en hacer efecto sobre la evolución del sistema, las escalas temporales no son importantes en este momento.  Gracias a esta restricción se pueden incluir interacciones complejas que por lo general no son analizadas en la literatura, como las interacciones de larga distancia o las interacciones entre todas las partículas. Esto hace que la energía no llegue a ser una cantidad extensiva.
 
 \section{Equilibración}
 
-La perspectiva principal que se quiere dar a entender siguiendo a  los autores \cite{LindenPaper} viene en forma del siguiente resultado: Para cada estado puro de un sistema cuántico que se compone por un número grande de estados de energía propios y el cual evoluciona bajo un Hamiltoniano que tiene brechas de energías no degeneradas y por lo demás arbitrario, es tal que cada pequeño subsistema llegará al equilibrio. Esto quiere decir que para todos los subsistemas pequeños cumplirán con las ideas anteriores sobre equilibrio exactamente que el sistema evolucionará a un estado particular y se quedará cercano a él o en este durante la mayoría del tiempo.
+La perspectiva principal que se quiere proponer siguiendo a  los autores \cite{LindenPaper} viene en forma del siguiente resultado: Para cada estado puro de un sistema cuántico que se compone por un número grande de estados de energía propios, y el cual evoluciona bajo un hamiltoniano que tiene brechas de energías no degeneradas y por lo demás arbitrario, es tal que cada pequeño subsistema llegará al equilibrio. Esto quiere decir que todos los subsistemas pequeños cumplirán con las ideas anteriores sobre equilibrio y que el subsistema evolucionará a un estado particular y se quedará cercano a él o en este durante la mayoría del tiempo.
 \\
-Hay en este resultado un requerimiento que anteriormente no fue nombrado, el requerimiento de una cantidad grande de estados propios de energía. La necesidad de que el sistema tenga muchos estados propios de energía es equivalente a decir que el estado variará bastante durante su evolución temporal. por ejemplo, el caso trivial de un solo estado propio de energía es claro que este no cambiará para nada. Este caso tan particular no llega a ser de mucho interés porque este estado no evolucionará a otro y se diría que ya se encuentra en equilibrio. Los resultados que se quieren mostrar tomaran estados fuera del equilibrio. En este punto se usan las otras suposiciones hechas anteriormente. Para que el subsistema no dependa del estado inicial el subsistema debe perder esta información; si el subsistema empieza lejano al equilibrio este pasará  por muchos estados en su camino al equilibrio lo cual implica que el universo también evolucione en muchos estados. El hecho de que el subsistema haya llegado al equilibrio no significa que el universo deje de evolucionar. Debido a la unitaridad, debe seguir evolucionando como lo venía haciendo. Para que los estados en los que el subsistema se encuentre en no equilibrio ocurran poco, los estados del universo en los que el subsistema se encuentre en esas condiciones deben ser una fracción muy pequeña del total de estados por donde pasa el universo. Por esto el universo debe pasar por muchos estados y el requerimiento de que tenga muchos estados propios de energía se vuelve necesario. 
+En este resultado hay un requerimiento que anteriormente no fue nombrado, el de una cantidad grande de estados propios de energía. La necesidad de que el sistema tenga muchos estados propios de energía es equivalente a decir que el estado variará bastante durante su evolución temporal. Por ejemplo, en el caso trivial de un solo estado propio de energía, es claro que éste no cambiará para nada. Este caso tan particular no llega a ser de mucho interés porque este estado no evolucionará a otro y se diría que ya se encuentra en equilibrio. Los resultados que se quieren mostrar tomaran estados fuera del equilibrio. En este punto se usan las otras suposiciones hechas anteriormente. Para que el subsistema no dependa del estado inicial, el subsistema debe perder esta información; si el subsistema empieza lejano al equilibrio este pasará  por muchos estados en su camino al equilibrio lo cual implica que el universo también evolucionará en muchos estados. El hecho de que el subsistema haya llegado al equilibrio no significa que el universo deje de evolucionar, de hecho, debido a la unitaridad, debe seguir evolucionando como lo venía haciendo. Para que los estados en los que el subsistema se encuentre en no equilibrio ocurran poco, los estados del universo en los que el subsistema se encuentre en esas condiciones deben ser una fracción muy pequeña del total de estados por donde pasa el universo. Por esto el universo debe pasar por muchos estados, y el requerimiento de que tenga muchos estados propios de energía se vuelve necesario. 
 \\
-Otra forma de saber qué pasa con el universo es observar qué ocurre con el ambiente. Por unitaridad, el universo debe seguir evolucionando aunque el subsistema se encuentre en equilibrio y no cambie. Esta Evolución puede darse por el cambio de correlaciones entre el subsistema y el baño o por cambios en el estado del baño \cite{Decoherence}. Lo que se muestra es: cuando el estado del baño pasa por muchos estados diferentes, cualquier subsistema alcanza el equilibrio. También se muestra que cuando el estado del universo pasa por muchos estados diferentes cualquier estado pequeño subsistema alcanza el equilibrio. Estas dos ideas  exponen que la equilibración ocurre en estados productos iniciales entre el subsistema y el baño, para casi todos los estados iniciales del baño.
+Otra forma de saber qué pasa con el universo es observar qué ocurre con el ambiente. Por unitaridad, el universo debe seguir evolucionando aunque el subsistema se encuentre en equilibrio y no cambie. Esta evolución puede darse por el cambio de correlaciones entre el subsistema y el baño, o por cambios en el estado del baño \cite{Decoherence}. Lo que se muestra es: cuando el estado del baño pasa por muchos estados diferentes, cualquier subsistema alcanza el equilibrio. También se muestra que cuando el estado del universo pasa por muchos estados diferentes, cualquier subsistema, suficientemente pequeño, alcanza el equilibrio. Estas dos ideas exponen que la equilibración ocurre en estados iniciales que son producto entre el subsistema y el baño, para casi todos los estados iniciales del baño.
 \\
-
+ 
 Para poder empezar a construir estos conceptos matemáticamente, se puede empezar con la concepción matemática de evolucionar por muchos estados diferentes. Esta se comprime en la dimensión efectiva del promedio temporal del estado del sistema $d^{eff}(\omega)$ donde $\omega= \big \langle \rho(t) \big\rangle_{t}$. Esta medida de evolución por muchos estados se puede relacionar con los estados propios de energía así:
 \\
 Se toma el estado del universo
@@ -48,11 +49,11 @@ y dando la relación se calcula la dimensión efectiva resultando
 d^{eff}(\omega)=\frac{1}{Tr(\omega^{2})}=\frac{1}{\sum_{k} |c_{k}|^{4} }.
 \end{equation}
 \\
-Similarmente el hecho de que el baño pase por muchos estados diferentes viene dado por $d^{eff}(\omega_{B})$ con $\omega_{B}=\langle \rho(t) \rangle_{t}$. Debido a que el baño al evolucionar pase por muchos más estados dado que el universo debe seguir evolucionando y el subsistema quede en un espacio de estados más pequeño se preve que $d_{S}$ es mucho más pequeño que $d^{eff}(\omega_{B})$. Para formular ya el primer teorema se quiere ver la distancia entre $\rho_{S}(t)$ y su promedio temporal $\omega_{S}= \langle \rho_{S}(t) \rangle_{t}$. Como se espera que $\rho_{S}(t) $ vaya fluctuando alrededor de $\omega_{S}$ se analizará el promedio temporal de su distancia $\langle D(\rho_{S}(t) ,\omega_{S}) \rangle_{t}$ cuando este sea muy pequeño el subsistema debe pasar gran parte del tiempo muy cerca a $\omega_{S}$. Esto quiere decir que el subsistema se equilibrará(según la definición anterior) a $\omega_{S}$.
+Similarmente el hecho de que el baño pase por muchos estados diferentes viene dado por $d^{eff}(\omega_{B})$ con $\omega_{B}=\langle \rho(t) \rangle_{t}$. Debido a que el baño al evolucionar pase por muchos más estados dado que el universo debe seguir evolucionando y el subsistema quede en un espacio de estados más pequeño se preve que $d_{S}$ es mucho más pequeño que $d^{eff}(\omega_{B})$. Para formular ya el primer teorema se quiere ver la distancia entre $\rho_{S}(t)$ y su promedio temporal $\omega_{S}= \langle \rho_{S}(t) \rangle_{t}$. Como se espera que $\rho_{S}(t) $ vaya fluctuando alrededor de $\omega_{S}$ se analizará el promedio temporal de su distancia $\langle D(\rho_{S}(t) ,\omega_{S}) \rangle_{t}$ cuando éste sea muy pequeño el subsistema debe pasar gran parte del tiempo muy cerca a $\omega_{S}$. Esto quiere decir que el subsistema se equilibrará (según la definición anterior) a $\omega_{S}$.
 
 \begin{theorem} \label{equlibracion}
 
-Considere cualquier estado $\ket{\psi(t)} \in \mathcal{H}$ evolucionando bajo un Hamiltoniano con brechas de energía no-degeneradas. Luego la distancia promedio entre $\rho_{S}(t)$ y su promedio temporal $\omega_{S}$ está acotado por:
+Considere cualquier estado $\ket{\psi(t)} \in \mathcal{H}$ evolucionando bajo un hamiltoniano con brechas de energía no-degeneradas. Luego la distancia promedio entre $\rho_{S}(t)$ y su promedio temporal $\omega_{S}$ está acotado por:
 
 \begin{equation}
 \langle D(\rho_{S}(t) ,\omega_{S}) \rangle_{t} \le \frac{1}{2} \sqrt{\frac{d_{S}}{d^{eff}(\omega_{B})}} \le \frac{1}{2} \sqrt{\frac{d_{S}^{2}}{d^{eff}(\omega)}}.
@@ -107,7 +108,7 @@ Debido a la restricción impuesta al hamiltoniano de brechas de energías no deg
 &=\Tr_{B} \omega_{B}^{2} -\sum_{k} |c_{k}|^{4} \Tr_{S}[ \Tr_{B}( \ket{E_{k}} \bra{E_{k}})]^{2} \leq  \Tr_{B}( \omega_{B}^{2}).
 \end{align*}
 
-La última  igualdad se encuentra recordando la definición de $\omega_{B}$ y observando la segunda igualdad. Por la subaditividad débil de la entropía de Rényi \cite{RenyiEntropia}:
+La última igualdad se encuentra recordando la definición de $\omega_{B}$ y observando la segunda igualdad. Por la subaditividad débil de la entropía de Rényi \cite{RenyiEntropia}:
 
 \begin{equation}
 \Tr(\omega^{2}) \geq  \frac{\Tr_{B}(\omega_{B}^{2})}{ \rank (\rho_{S})} \geq \frac{\Tr_{B}(\omega_{B}^{2})}{d_{S}}.
@@ -119,7 +120,7 @@ Uniendo todos los resultados con la desigualdad inicial del promedio de la dista
 \langle D(\rho_{S}(t) ,\omega_{S}) \rangle_{t} \le  \frac{1}{2} \sqrt{d_{S} \Tr_{B}(\omega_{B}^{2})} \le \frac{1}{2}\sqrt{d_{S}^{2} 	\Tr(\omega^{2})}=\frac{1}{2}\sqrt{\frac{d_{S}^{2}}{d^{eff}(\omega)}}.
 \end{equation}
 \end{proof}
-Este resultado  da base para hablar de la termalización de una forma matemática, se ve que el subsistema en promedio se equilibra cuando la dimensión de $d^{eff}(\omega)$ sea mucho mayor que la dimensión de dos copias del subsistema $d_{S}^{2}$ o cuando la dimensión efectiva explorada por el baño $d^{eff}(\omega_{B})$ sea mucho más grande que la dimensión del subsistema.
+Este resultado da base para hablar de la termalización de una forma matemática, se ve que el subsistema en promedio se equilibra cuando la dimensión de $d^{eff}(\omega)$ sea mucho mayor que la dimensión de dos copias del subsistema $d_{S}^{2}$ o cuando la dimensión efectiva explorada por el baño $d^{eff}(\omega_{B})$ sea mucho más grande que la dimensión del subsistema.
 \\
 El resultado anterior tiene varias generalidades que se quiere recodar. La restricción impuesta sobre el Hamiltoniano  es una que no excluye muchos Hamiltonianos \cite{SakuraiQuantum}. Aunque esta ha sido la única restricción sobre todo el universo no se ha especificado nada del baño ni del subsistema. El baño no está necesariamente en equilibrio no se le ha dado ninguna interpretación con respecto a la termodinámica usual a ningún objeto tratado hasta ahora. No se ha hablado tampoco de la forma específica en la que el subsistema llega al equilibrio ni que está en algún estado específico.
 \\
